# zangoh-project

./: .env.example  .gitignore  README.md  architecture.md  main.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
.github/: copilot-instructions.md
__MACOSX/audio_support_agent/data/: ._.gitkeep
data/chroma_db/: chroma.sqlite3
src/: pipeline.py
src/api/: server.py
src/llm/: agent.py
src/stt/: base_stt.py
src/tts/: base_tts.py
src/utils/: audio_chunking.py
tests/: test_audio_contract.py  test_text_contract.py
